# ML-project-meshcompression

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
benchmarks/: benchmark_utils.py  run_draco_benchmark.py  run_draco_benchmark_multiprocess.py
results/: draco_benchmark_toys4k_test.csv
src/: main.py
src/meshcompression/: __main__.py  constants.py  render.py
src/meshcompression/dataset/: modelnet.py  objaverse.py  shapenet.py  toys4k.py
